<resources>
    <string name="app_name">Merge Photos</string>
    <string name="load_images">Load Images</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="ouput_format">Ouput format</string>
    <string name="engine_options">Engine options</string>
    <string name="jpeg">Jpeg</string>
    <string name="png">Png</string>
    <string name="tiff">Tiff</string>
    <string name="cancel">Cancel</string>
    <string-array name="merge_modes">
        <item>Panorama</item>
        <item>Long exposure</item>
        <item>HDR</item>
        <item>Align</item>
    </string-array>
    <string-array name="panorama_projections">
        <item>Plane</item>
        <item>Cylindrical</item>
        <item>Spherical</item>
    </string-array>
    <string-array name="longexposure_algorithms">
        <item>Average</item>
        <item>Nearest to Average</item>
        <item>Farthest from Average</item>
    </string-array>
    <string-array name="jpeg_quality">
        <item>60</item>
        <item>75</item>
        <item>90</item>
        <item>100</item>
    </string-array>
    <string-array name="depth">
        <item>Auto</item>
        <item>8 bits</item>
        <item>16 bits</item>
    </string-array>
</resources>